[tool.poetry]
name = "hexgame-agents"
version = "0.1.0"
description = ""
authors = ["Christofer Berruz Chungata <cberruzc@my.bridgeport.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pettingzoo = {extras = ["classic"], version = "^1.24.3"}
torch = "^2.5.1"
click = "^8.1.7"
torchvision = "^0.20.1"
ray = {extras = ["tune"], version = "^2.39.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
